fixed a spacing issue

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1167,6 +1167,7 @@ pre tt:after {
   }
 
 .spaceMePleaseTopText {
+  text-align: center;
   color: white;
 }
   
